// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertDialog   in "constrained" intent, action button should be disabled by default 1`] = `
<div
  aria-describedby="radix-:r8:"
  aria-labelledby="radix-:r7:"
  class="absolute inset-1/2 z-20 h-fit w-[640px] -translate-x-1/2 -translate-y-3/4 space-y-4 bg-layer p-6"
  data-state="open"
  id="radix-:r6:"
  role="alertdialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <div
    class="flex flex-row justify-between"
  >
    <h2
      class="font-semibold"
      id="radix-:r7:"
    >
      Test Alert Dialog title
    </h2>
    <button
      class="bg-transparent p-2 hover:bg-neg-hover hover:text-white active:bg-neg-active active:outline-none"
      type="button"
    >
      <svg
        class="fill-icon"
        fill="none"
        height="15"
        viewBox="0 0 15 15"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
  <div
    id="radix-:r8:"
  >
    Test Alert Dialog description
    <div
      class="flex flex-col"
    >
      <div>
        <span
          class="mt-4 inline-block text-support"
        >
          To continue, enter the phrase
        </span>
        <span
          class="font-bold"
        >
           test action phrase
        </span>
      </div>
      <input
        class="my-4 w-full px-2 py-1 outline outline-1 outline-border-interactive"
        placeholder="test action phrase"
        type="text"
      />
    </div>
  </div>
  <div
    class="flex flex-row justify-end gap-x-6"
  >
    <button
      class="text-sm focusable text-dark hover:bg-gray6 active:bg-layer-active px-4 py-3 w-fit"
      role="button"
      type="button"
    >
      Alert Dialog Close
    </button>
    <button
      class="text-sm text-gray8 outline outline-2 outline-gray6 px-4 py-1 w-fit"
      disabled=""
      role="button"
      type="button"
    >
      Alert Dialog Action
    </button>
  </div>
</div>
`;

exports[`AlertDialog   in "constrained" intent, action button should be disabled by default 2`] = `
<button
  class="text-sm text-gray8 outline outline-2 outline-gray6 px-4 py-1 w-fit"
  disabled=""
  role="button"
  type="button"
>
  Alert Dialog Action
</button>
`;

exports[`AlertDialog   in "constrained" intent, action button should be enabled when input value matches action text 1`] = `
<button
  class="text-sm focusable block bg-neg text-white hover:bg-neg-hover focus:ring-[3px] focus:ring-inset focus:ring-focus-inset active:bg-neg-active active:outline-red8 active:ring-0 active:drop-shadow px-4 py-1 w-fit"
  role="button"
  type="button"
>
  Alert Dialog Action
</button>
`;

exports[`AlertDialog   in "constrained" intent, action button should be enabled when input value matches action text 2`] = `
<div
  aria-describedby="radix-:rb:"
  aria-labelledby="radix-:ra:"
  class="absolute inset-1/2 z-20 h-fit w-[640px] -translate-x-1/2 -translate-y-3/4 space-y-4 bg-layer p-6"
  data-state="open"
  id="radix-:r9:"
  role="alertdialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <div
    class="flex flex-row justify-between"
  >
    <h2
      class="font-semibold"
      id="radix-:ra:"
    >
      Test Alert Dialog title
    </h2>
    <button
      class="bg-transparent p-2 hover:bg-neg-hover hover:text-white active:bg-neg-active active:outline-none"
      type="button"
    >
      <svg
        class="fill-icon"
        fill="none"
        height="15"
        viewBox="0 0 15 15"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
  <div
    id="radix-:rb:"
  >
    Test Alert Dialog description
    <div
      class="flex flex-col"
    >
      <div>
        <span
          class="mt-4 inline-block text-support"
        >
          To continue, enter the phrase
        </span>
        <span
          class="font-bold"
        >
           test action phrase
        </span>
      </div>
      <input
        class="my-4 w-full px-2 py-1 outline outline-1 outline-border-interactive"
        input="test action phrase"
        placeholder="test action phrase"
        type="text"
      />
    </div>
  </div>
  <div
    class="flex flex-row justify-end gap-x-6"
  >
    <button
      class="text-sm focusable text-dark hover:bg-gray6 active:bg-layer-active px-4 py-3 w-fit"
      role="button"
      type="button"
    >
      Alert Dialog Close
    </button>
    <button
      class="text-sm focusable block bg-neg text-white hover:bg-neg-hover focus:ring-[3px] focus:ring-inset focus:ring-focus-inset active:bg-neg-active active:outline-red8 active:ring-0 active:drop-shadow px-4 py-1 w-fit"
      role="button"
      type="button"
    >
      Alert Dialog Action
    </button>
  </div>
</div>
`;

exports[`AlertDialog  should render "constrained" intent 1`] = `
<div
  aria-describedby="radix-:r5:"
  aria-labelledby="radix-:r4:"
  class="absolute inset-1/2 z-20 h-fit w-[640px] -translate-x-1/2 -translate-y-3/4 space-y-4 bg-layer p-6"
  data-state="open"
  id="radix-:r3:"
  role="alertdialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <div
    class="flex flex-row justify-between"
  >
    <h2
      class="font-semibold"
      id="radix-:r4:"
    >
      Test Alert Dialog title
    </h2>
    <button
      class="bg-transparent p-2 hover:bg-neg-hover hover:text-white active:bg-neg-active active:outline-none"
      type="button"
    >
      <svg
        class="fill-icon"
        fill="none"
        height="15"
        viewBox="0 0 15 15"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
  <div
    id="radix-:r5:"
  >
    Test Alert Dialog description
    <div
      class="flex flex-col"
    >
      <div>
        <span
          class="mt-4 inline-block text-support"
        >
          To continue, enter the phrase
        </span>
        <span
          class="font-bold"
        >
           test action phrase
        </span>
      </div>
      <input
        class="my-4 w-full px-2 py-1 outline outline-1 outline-border-interactive"
        placeholder="test action phrase"
        type="text"
      />
    </div>
  </div>
  <div
    class="flex flex-row justify-end gap-x-6"
  >
    <button
      class="text-sm focusable text-dark hover:bg-gray6 active:bg-layer-active px-4 py-3 w-fit"
      role="button"
      type="button"
    >
      Alert Dialog Close
    </button>
    <button
      class="text-sm text-gray8 outline outline-2 outline-gray6 px-4 py-1 w-fit"
      disabled=""
      role="button"
      type="button"
    >
      Alert Dialog Action
    </button>
  </div>
</div>
`;

exports[`AlertDialog  should render "constrained" intent 2`] = `
<input
  class="my-4 w-full px-2 py-1 outline outline-1 outline-border-interactive"
  placeholder="test action phrase"
  type="text"
/>
`;

exports[`AlertDialog  should render "default" intent 1`] = `
<div
  aria-describedby="radix-:r2:"
  aria-labelledby="radix-:r1:"
  class="absolute inset-1/2 z-20 h-fit w-[640px] -translate-x-1/2 -translate-y-3/4 space-y-4 bg-layer p-6"
  data-state="open"
  id="radix-:r0:"
  role="alertdialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <div
    class="flex flex-row justify-between"
  >
    <h2
      class="font-semibold"
      id="radix-:r1:"
    >
      Test Alert Dialog title
    </h2>
    <button
      class="bg-transparent p-2 hover:bg-neg-hover hover:text-white active:bg-neg-active active:outline-none"
      type="button"
    >
      <svg
        class="fill-icon"
        fill="none"
        height="15"
        viewBox="0 0 15 15"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
  <div
    id="radix-:r2:"
  >
    Test Alert Dialog description
  </div>
  <div
    class="flex flex-row justify-end gap-x-6"
  >
    <button
      class="text-sm focusable text-dark hover:bg-gray6 active:bg-layer-active px-4 py-3 w-fit"
      role="button"
      type="button"
    >
      Alert Dialog Close
    </button>
    <button
      class="text-sm focusable block bg-neg text-white hover:bg-neg-hover focus:ring-[3px] focus:ring-inset focus:ring-focus-inset active:bg-neg-active active:outline-red8 active:ring-0 active:drop-shadow px-4 py-1 w-fit"
      type="button"
    >
      Alert Dialog Action
    </button>
  </div>
</div>
`;
